--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "noUnusedLocals": true,
     "jsx": "react",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "esModuleInterop": true
   },
   "exclude": [
